[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://arena/arena.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/main/title.png" type="Texture" id=3]
[ext_resource path="res://ui/main/main_menu.gd" type="Script" id=4]
[ext_resource path="res://ui/settings/settings_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/visor_transition.tscn" type="PackedScene" id=6]
[ext_resource path="res://music/in_game.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "fade_music_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -20.0, -10.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_music_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, -20.0, -30.0, -80.0 ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" parent="." instance=ExtResource( 2 )]
MENU_VERSION = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 53.0
margin_top = -44.0
margin_right = 199.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PvpButton" parent="ButtonContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 47.0
margin_bottom = 26.0
text = "PvP"

[node name="SettingsButton" parent="ButtonContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 30.0
margin_right = 105.0
margin_bottom = 56.0
text = "Settings"

[node name="CreditsButton" parent="ButtonContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 60.0
margin_right = 92.0
margin_bottom = 86.0
text = "Credits"

[node name="ExitButton" parent="ButtonContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 90.0
margin_right = 51.0
margin_bottom = 116.0
text = "Exit"

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]

[node name="Title" type="TextureRect" parent="."]
margin_left = 56.4462
margin_top = -80.5001
margin_right = 6056.45
margin_bottom = 2919.5
rect_scale = Vector2( 0.15, 0.15 )
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisorTransition" parent="." instance=ExtResource( 6 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true
bus = "MainMenuMusic"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_music_in = SubResource( 1 )
anims/fade_music_out = SubResource( 2 )
[connection signal="pressed" from="ButtonContainer/PvpButton" to="." method="_on_PvpButton_pressed"]
[connection signal="pressed" from="ButtonContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="ButtonContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="popup_hide" from="SettingsMenu" to="." method="_on_SettingsMenu_popup_hide"]
[connection signal="lifted_up" from="VisorTransition" to="." method="_on_VisorTransition_lifted_up"]

[editable path="Game"]
